Fix lbl align

--- a/tp-html-css/assets/css/style.css
+++ b/tp-html-css/assets/css/style.css
@@ -36,22 +36,28 @@ section
 /* Formulaire */
 .field
 {
+    margin-left: 20%;
     text-align: center;
     width: 100%;
 }
 
 label
 {
+    display: block;
+
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.9em;
+    font-size: 0.8em;
     text-align: left;
 }
 
 input
 {
+    display: block;
     border-style: inset;
     width: 60%;
     height: 2.5em;
+
+    margin-bottom: 1%;
 }
 
 
